Fixed the side bar overflow issue in model details page

--- a/src/app/models/[id]/modelDetail.module.css
+++ b/src/app/models/[id]/modelDetail.module.css
@@ -1,3 +1,7 @@
+html, body {
+    overflow-x: hidden;
+}
+
 .navbarWrapper {
     width: 100%;
     display: flex;
